--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,47 @@ h3 {
 }
 /* Section Titles Ends */
 
+/* Navbar Style Start */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 85.333px;
+    background-color: var(--white);
+    box-shadow: 0px 5.333px 80px 0 rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.navbar--items > ul {
+    list-style: none;
+    display: flex;
+    align-items: flex-start;
+    gap: 42.667px;
+    text-decoration: none;
+}
+
+.navbar--items > ul > li > a {
+    text-decoration: none;
+}
+
+/* Navbar Content */
+.navbar--content {
+    color: var(--darkblue);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    cursor: pointer;
+}
+
+.navbar--active--content {
+    color: var(--primary);
+}
+/* Navbar Sytle Ends */
+
 /* Hero Section Style */
 .hero--section {
     display: flex;
@@ -189,4 +230,29 @@ h3 {
 
 .hero--section--title {
     color: var(--heading-color);
+    font-size: 74.667px;
+    font-weight: 700;
+    line-height: 90px;
+    align-self: stretch;
 }
+
+.hero--section--title--color {
+    color: var(--primary);
+}
+
+.hero--section--description {
+    color: var(--darkblue);
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+}
+
+.hero--section--img {
+    display: flex;
+}
+
+.hero--section--img > img {
+    width: 100%;
+    height: 100%;
+}
+/* Hero Section Style Ends */
