--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,9 @@ p {
     background-color: var(--white);
 }
 
+a {
+  text-decoration: none;
+}
 .btn-github {
     color: var(--white);
     background-color: var(--github);
@@ -134,6 +137,18 @@ h3 {
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
+}
+
+.logo--container {
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+    gap: 21px;
+    line-height: 24px;
+}
+
+.logo--container > h3 {
+    color: var(--heading-color);
 }
 
 /* Section Titles  */
@@ -273,24 +288,31 @@ h3 {
     line-height: 77px;
 }
 
+.skiils--section--container--box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .skills--section--container {
-    display: grid;
+    display: flex;
     justify-content: center;
     align-items: flex-start;
-    gap: 42.6px;
-    grid-template-columns: repeat(4, 1fr);
+    gap: 21.6px;
+    border: 1px solid var(--white);
+    flex-wrap: wrap;
 }
 
 .skills--section--card {
     display: flex;
-    padding: 32px;
+    padding: 64px;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 32px;
     flex: 1 0 0;
     border-radius: 10.6px;
     background: var(--bg-shade);
-    min-height: 250px;
+    min-height: 180px;
 }
 
 .skills--section--card:hover {
@@ -302,7 +324,7 @@ h3 {
 }
 
 .skills--section--img {
-    display: flex;
+    
     padding: 13.3px;
     justify-content: center;
     align-items: center;
@@ -312,10 +334,15 @@ h3 {
     box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
 }
 
+.skills--section--img > img {
+    max-width: 70px;
+    max-height: 70px;
+}
+
 .skills--section--card--content {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 32px;
     align-self: stretch;
 }
@@ -332,6 +359,437 @@ h3 {
     font-size: 21.3px;
     font-style: normal;
     font-weight: 400;
-    line-height: 32px;
+    line-height: 21px;
 }
 /* Skills Style Ends */
+
+/* About me */
+.about--section {
+    display: grid;
+    padding: 133.3px 85.3px;
+    align-items: center;
+    gap: 114.6px;
+    grid-template-columns: repeat(2, 1fr);
+    background: var(--bg-shade);
+}
+
+.about--section--img > img {
+    width: 100%;
+    height: 100%;
+}
+/* About Me Ends */
+
+/* My Portfolio */
+.portfolio--section {
+    display: flex;
+    padding: 112px 85px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 80px;
+}
+
+.portfolio--container--box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.portfolio--container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 21.3px;
+}
+
+.portfolio--section--container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 42.6px;
+    width: 100%;
+}
+
+.portfolio--section--img {
+    border-radius: 8px;
+    width: 100%;
+}
+
+.portfolio--section--img > img {
+    width: 100%;
+}
+
+.portfolio--section--card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    flex: 1 0 0;
+    background: #fff;
+    box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.portfolio--section--card--content {
+    display: flex;
+    padding: 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+}
+.portfolio--section--title {
+    color: var(--heading-color);
+}
+.portfolio--link {
+    text-decoration: none;
+    display: flex;
+    gap: 16px;
+    border-radius: 1.33px solid var(--primary);
+    padding-bottom: 10.6px;
+    font-weight: 600;
+}
+
+.portfolio--link > a{
+  color: var(--black);
+}
+
+.portfolio--section--card:hover path {
+    stroke: #006b6a;
+}
+/* Portfolio Ends */
+
+/* Contact Info Sytle */
+.contact--section {
+    background: var(--bg-shade);
+    display: flex;
+    padding: 180px 85px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 64px;
+}
+
+.contact--info--container--box {
+    margin-top: 40px;
+    padding: 54px;
+    background: var(--white);
+    display: flex;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
+    border-radius: 12px;
+    gap: 32px;
+}
+
+.contact--link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+}
+
+.contact--link > a {
+    text-decoration: none;
+    color: var(--darkblue);
+}
+
+.contact--link > img,
+.contact--link > svg {
+    width: 54px;
+    height: 54px;
+}
+
+.footer--container {
+    display: flex;
+    padding: 106.667px 85.333px;
+    flex-direction: column;
+    align-items: flex-start;
+    background: var(--bg-shade);
+    align-items: center;
+    align-self: stretch;
+  }
+  .footer--link--container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+  }
+  .footer--items > ul {
+    list-style: none;
+    display: flex;
+    align-items: flex-start;
+    gap: 42.667px;
+    text-decoration: none;
+  }
+
+  .footer--items ul > li > a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .footer--social--icon > ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 16px;
+    flex-shrink: 0;
+    text-decoration: none;
+  }
+  .divider {
+    margin: 106px 0 42.67px;
+    height: 1.333px;
+    width: 100%;
+    background: rgba(40, 41, 56, 0.55);
+  }
+  .footer--content--container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+  }
+
+  .footer--content {
+    color: var(--black);
+    font-size: 18.667px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+/* Responsive Screens */
+@media only screen and (max-width: 1800px) {
+    .hero--section--title {
+      font-size: 68px;
+      line-height: 70px;
+    }
+    .skills--section--title {
+      font-size: 28px;
+      line-height: 40px;
+    }
+  }
+
+@media only screen and (max-width: 1600px) {
+    .skills--section--heading {
+      font-size: 54px;
+      line-height: 70px;
+    }
+    .skills--section--container {
+      gap: 16px;
+    }
+    .skills--section--card {
+      gap: 28px;
+    }
+    .skills--section--card--content {
+      gap: 20px;
+    }
+    .skills--section--title {
+      font-size: 23px;
+      line-height: 30px;
+    }
+    .skills--section--description {
+      font-size: 17.333px;
+      line-height: 27px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .btn-outline-primary {
+      display: none;
+    }
+    .hero--section {
+      width: 100vw;
+      max-height: 100%;
+      display: flex;
+      flex-direction: column-reverse;
+      padding-bottom: 70px;
+    }
+    .hero--section--title,
+    .hero--section-description,
+    .footer--content {
+      text-align: center;
+    }
+    .skills--section {
+      width: 100%;
+      display: flex;
+    }
+
+    .skills--section--container {
+      display: flex;
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+      padding-top: 70px;
+      padding-bottom: 70px;
+      gap: 10px;
+      overflow: hidden;
+      overflow-x: auto;
+      height: 100%;
+      width: 100vw;
+    }
+
+    .skills--section--card--content {
+      padding: 32px;
+    }
+
+    .skills--section--card {
+      padding: 45px;
+      max-width: 70px;
+      max-height: 70px;
+    }
+
+    .about--section,
+    .portfolio--section--container,
+    .portfolio--container--box,
+    .footer--link--container,
+    .footer--items > ul,
+    .footer--content--container {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .skills--section,
+    .portfolio--container,
+    .hero--section--content,
+    .hero--section--content--box {
+      align-items: center;
+    }
+
+    .portfolio--section--container {
+      justify-content: center;
+      align-items: center;
+      width: 100vw;
+    }
+
+    .portfolio--container--box {
+        width: 100vw;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+      }
+      .skills--section,
+      .contact--section,
+      .footer--container {
+        gap: 20px;
+        padding-top: 70px;
+        padding-bottom: 70px;
+        width: 100vw;
+        max-height: 100%;
+        max-width: 100% ;
+      }
+      .about--section {
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        padding-top: 70px;
+        padding-bottom: 70px;
+        width: 100vw;
+        max-height: 100%;
+      }
+      .hero--section--title,
+      .skills--section--heading,
+      .sections--heading {
+        font-size: 35px;
+        line-height: 40px;
+      }
+      .hero--section--content--box {
+        gap: 10px;
+      }
+      .contact--info--container--box {
+        margin-bottom: 70px;
+        max-width: 100%;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: flex-start;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+      .footer--social--icon > ul,
+      .footer--items > ul {
+        padding: 0;
+        align-items: center;
+      }
+      .divider {
+        margin: 20px;
+      }
+    }
+  
+  /* Hamburger menu  */
+  
+  .nav__hamburger {
+    display: none;
+    width: 1.875rem;
+    height: 1.313rem;
+    flex-direction: column;
+    justify-content: space-around;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+  }
+  
+  .nav__hamburger__line {
+    display: block;
+    height: 0.188rem;
+    width: 100%;
+    background-color: #000000;
+    border-radius: 0.625rem;
+    transition: all ease-in-out 0.2s;
+  }
+  
+  @media screen and (max-width: 1200px) {
+    .nav__hamburger {
+      display: flex;
+      z-index: 200;
+    }
+    .navbar--items {
+      display: flex;
+    }
+    .navbar--items {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(255, 255, 255);
+      top: -20rem;
+      left: 0;
+      width: 100%;
+      transition: all ease-in-out 0.4s;
+    }
+    .navbar--items ul {
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      padding: 3rem 0 0.6rem;
+      z-index: -100;
+    }
+    .navbar--items ul li {
+      text-align: center;
+    }
+    .navbar--items ul li a {
+      padding: 0.5rem;
+    }
+    .navbar--items {
+      z-index: -1000;
+    }
+    .navbar--items.active {
+      top: 30px;
+    }
+    .nav__hamburger.active :nth-child(1) {
+      transform: rotate(45deg) translate(0.45rem, 0.1875rem);
+    }
+  
+    .nav__hamburger.active :nth-child(2) {
+      opacity: 0;
+    }
+  
+    .nav__hamburger.active :nth-child(3) {
+      transform: rotate(-45deg) translate(0.45rem, -0.1875rem);
+    }
+  }
