--- a/src/App.css
+++ b/src/App.css
@@ -745,7 +745,7 @@ h3 {
   
   @media screen and (max-width: 1200px) {
     .navbar {
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
     }
 
